# TK-OPS-ASSISTANT-v3

./: .gitattributes  .gitignore  .graphify_analysis.json  .graphify_ast.json  .graphify_cached.json  .graphify_chunks.json  .graphify_detect.json  .graphify_uncached.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  start-desktop-dev.cmd
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/py-runtime/: README.md  alembic.ini  pyproject.toml
apps/py-runtime/alembic/: env.py
apps/py-runtime/alembic/versions/: 0001_initial_schema.py  0002_add_imported_videos.py  0003_add_business_modules.py  0003_core_operational_models.py  0004_add_prompt_templates_and_video_stage_runs.py  0004_extend_runtime_modules.py  0005_add_voice_profiles.py  0006_merge_runtime_heads.py  0007_add_ai_provider_models_and_browser_instances.py  0008_add_video_transcripts.py  0009_add_video_deconstruction_artifacts.py  0010_add_structured_script_versions.py  0011_add_render_task_error_code.py  0012_add_browser_runtime_fields.py  0013_add_render_task_timeline_id.py  0014_magic_cut_suggestion_drafts.py
apps/py-runtime/graphify-out/: GRAPH_REPORT.md  analysis.json  graph.html  graph.json
apps/py-runtime/src/: main.py
apps/py-runtime/src/app/: __init__.py  config.py  factory.py  logging.py  secret_store.py
apps/py-runtime/src/common/: http_errors.py
apps/py-runtime/src/devtools/: __init__.py  seed_data.py
apps/py-runtime/src/media/: ffmpeg.py
docs/: PRD.md  (+13 more)
(+747 files in other folders)
