[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-ops-runtime"
version = "0.3.1"
description = "TK-OPS Python runtime skeleton"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.16,<2.0",
  "pydantic>=2.11,<3.0",
  "cryptography>=45.0,<46.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
