[package]
name = "tk-ops-desktop"
version = "0.4.1"
description = "TK-OPS desktop shell"
authors = ["TK-OPS"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
